
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref 
"elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.34.1]]
== 0.34.1 (TBD)

icon:plus[] Core: The core Vert.x library was updated to version 3.7.1

icon:check[] Focal point: It is now possible to use the `/api/v1/:projectName/nodes/:uuid/binaryTransform/:fieldName` to resize and image and set the focal point in one operation.

icon:check[] The `content-disposition` header will now contain the UTF-8 and ISO-8859-1 encoded filename. link:https://github.com/gentics/mesh/issues/702[#702]

[[v0.34.0]]
== 0.34.0 (28.05.2019)

icon:bullhorn[] Versioning Enhancements

[quote]
____

The versioning system has received various enhancements.

link:{{< relref "features.asciidoc" >}}#auto-purge[Auto Purge]

The auto purge feature will now automatically purge the previously no longer needed version of a content. You can control this behaviour using the `autoPurge` flag in the `mesh.yml` file.

Additionally schema's may now contain a `autoPurge` flag to override the setting on a per schema basis.

The documentation contains detailed information about how versioning can be controlled. 

link:{{< relref "features.asciidoc" >}}#_listing_versions[Listing Versions]

Versions of a node can now be listed via REST and GraphQL.

link:{{< relref "features.asciidoc" >}}#_purging_versions[Purging Versions]

Versions can now be purged across projects to reduce disk storage usage.
____

icon:check[] Java Rest Client: Fixed a bug that prevented automatic reconnection to the eventbus when it did not succeed immediately.

icon:check[] Upload: The document processing library _tika_ has been updated to version `1.21` to fix potential out of memory issues during upload document processing.
